--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-25) unstable; urgency=low
+
+  * Bug #45021: improve source code documentation (WIP)
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 17 Apr 2018 14:34:08 +0200
+
 ucs-school-import (16.0.1-24) unstable; urgency=low
 
   * Bug #45379: remove (revert) all code from this bug (object type)
