--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-84) unstable; urgency=low
+
+  * Bug #42137: fix test
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 18 Apr 2018 11:21:45 +0200
+
 ucs-test-ucsschool (4.0.4-83) unstable; urgency=low
 
   * Bug #45684/#46806: check if radius authentication also works with camel case usernames/hostnames
