--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (5.0.2-44) unstable; urgency=low
+
+  * Bug #42137: create, format and depend on not-ucsschool-lib-mapped extended
+    attribute
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 18 Apr 2018 11:37:38 +0200
+
 ucs-test-ucsschool (5.0.2-43) unstable; urgency=low
 
   * Bug #45379: remove (revert) all code from this bug (object type)
