--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-45) unstable; urgency=low
+
+  * Bug #46771: don't create both mapping and scheme
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 18 Apr 2018 13:10:11 +0200
+
 ucs-test-ucsschool (5.0.2-44) unstable; urgency=low
 
   * Bug #42137: create, format and depend on not-ucsschool-lib-mapped extended
