--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-86) unstable; urgency=low
+
+  * Bug #46771: don't create both mapping and scheme
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 18 Apr 2018 13:11:37 +0200
+
 ucs-test-ucsschool (4.0.4-85) unstable; urgency=low
 
   * Bug #46754: create, format and depend on not-ucsschool-lib-mapped extended
