--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.6-1) unstable; urgency=medium
+
+  * Bug #46826: reenable first use dialogs by using correct grid event
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 23 Mar 2018 14:55:21 +0100
+
 ucs-school-umc-wizards (9.0.5-4) unstable; urgency=medium
 
   * Bug #45018: fix removing school classes; regression from svn r79380.
