--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (14.0.0-4) unstable; urgency=low
+
+  * Bug #46696: remove excess argument
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 23 Apr 2018 14:24:41 +0200
+
 ucs-school-netlogon-user-logonscripts (14.0.0-3) unstable; urgency=low
 
   * Bug #46860/#45802: improve processing speed of listener module
