--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (13.0.2-15) unstable; urgency=low
+
+  * Bug #46778: remove excess argument
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 23 Apr 2018 14:26:47 +0200
+
 ucs-school-netlogon-user-logonscripts (13.0.2-14) unstable; urgency=low
 
   * Bug #45802: improve processing speed of listener module
