--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-27) unstable; urgency=low
+
+  * Bug #46861: fix off by one error in ucs-school-testuser-import
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 25 Apr 2018 15:23:12 +0200
+
 ucs-school-import (16.0.1-26) unstable; urgency=medium
 
   * Bug #46839: Add translation for ucsschoolTypes syntax choices
