--- a/ucs-school-umc-users/debian/changelog
+++ b/ucs-school-umc-users/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-users (14.0.2-1) unstable; urgency=medium
+
+  * Bug #45601: Add ucr variable autosearch_on_change to enable user list reload after changing class or school
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 27 Apr 2018 10:35:22 +0100
+
 ucs-school-umc-users (14.0.1-1) unstable; urgency=medium
 
   * Bug #46175: locked=none → locked=1
