--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-47) unstable; urgency=low
+
+  * Bug #46771: fix 121_limit_squid_reloads
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 08 May 2018 11:58:28 +0200
+
 ucs-test-ucsschool (5.0.2-46) unstable; urgency=low
 
   * Bug #46725: improved test script 91c_samba4_gpo_link_replication
