--- a/ucs-school-umc-users/debian/changelog
+++ b/ucs-school-umc-users/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-users (14.0.2-3) unstable; urgency=medium
+
+  * Bug #45601: Include missing script in postinst
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 09 May 2018 09:02:10 +0100
+
 ucs-school-umc-users (14.0.2-2) unstable; urgency=medium
 
   * Bug #45601: Update postinst script (see comment #16 on Bug #45601)
