--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (10.0.2-2) unstable; urgency=medium
+
+  * Bug #43037: Change label for file share restriction depending on exam mode
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 09 May 2018 13:28:34 +0100
+
 ucs-school-umc-computerroom (10.0.2-1) unstable; urgency=medium
 
   * Bug #35076: Remove free printing option from computer room settings
