--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-28) unstable; urgency=low
+
+  * Bug #47027: fix old_user attributes being overwritten
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 17 May 2018 16:34:37 +0200
+
 ucs-school-import (16.0.1-27) unstable; urgency=low
 
   * Bug #46861: fix off by one error in ucs-school-testuser-import
