--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-48) unstable; urgency=low
+
+  * Bug #37983: disable 16_s4_slave_automatic_srv_record
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 17 May 2018 17:36:03 +0200
+
 ucs-test-ucsschool (5.0.2-47) unstable; urgency=low
 
   * Bug #46771: fix 121_limit_squid_reloads
