--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-97) unstable; urgency=medium
+
+  * Bug #47299: wait after UMC restart in 18_automatic_distribute_materials_check
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 03 Jul 2018 17:58:48 +0200
+
 ucs-test-ucsschool (4.0.4-96) unstable; urgency=medium
 
   * Bug #40727: Fix bug in essential/internetrule.py
