--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (14.0.1-1) unstable; urgency=low
+
+  * Bug #46922: add a link to Univention Portal on the user's Windows Desktop
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 May 2018 23:16:11 +0200
+
 ucs-school-netlogon-user-logonscripts (14.0.0-4) unstable; urgency=low
 
   * Bug #46696: remove excess argument
