--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (14.0.1-2) unstable; urgency=low
+
+  * Bug #46922: add new icon for Univention Portal shortcut
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 May 2018 11:05:57 +0200
+
 ucs-school-netlogon-user-logonscripts (14.0.1-1) unstable; urgency=low
 
   * Bug #46922: add a link to Univention Portal on the user's Windows Desktop
