--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.1-29) unstable; urgency=low
+
+  * Bug #42416: move handling of special mapping value for user role to
+    regular CsvReader
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 24 May 2018 19:52:23 +0200
+
 ucs-school-import (16.0.1-28) unstable; urgency=low
 
   * Bug #47027: fix old_user attributes being overwritten
