--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (5.0.2-50) unstable; urgency=low
+
+  * Bug #42416: adapt tests to use the new special mapping value in the regular
+   CsvReader
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 24 May 2018 19:57:26 +0200
+
 ucs-test-ucsschool (5.0.2-49) unstable; urgency=low
 
   * Bug #47031: wait after UMC restart in 18_automatic_distribute_materials_check
