--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-89) unstable; urgency=low
+
+  * Bug #47073: adapt tests to use the new special mapping value in the
+    regular CsvReader
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 24 May 2018 20:06:02 +0200
+
 ucs-test-ucsschool (4.0.4-88) unstable; urgency=low
 
   * Bug #43169: reenable 72_radius*authentication
