Bug #44243: Add changelog entry

--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (14.0.0-5) unstable; urgency=low
+
+  * Bug #44243: enable WLAN authentication for Unbeschränkt by default
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 25 May 2018 11:12:14 +0100
+
 ucs-school-webproxy (14.0.0-4) unstable; urgency=low
 
   * Bug #46290: raise timeout to 30s
