--- a/ucs-school-umc-users/debian/changelog
+++ b/ucs-school-umc-users/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-users (14.0.2-4) unstable; urgency=medium
+
+  * Bug #42212: Change password expiration representation to prevent user confusion
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 25 May 2018 12:26:43 +0100
+
 ucs-school-umc-users (14.0.2-3) unstable; urgency=medium
 
   * Bug #45601: Include missing script in postinst
