Bug #46872: Backport from 4.3 Bug #43080
Bug #43080: Add missing translation

Bug #43080: Ask for room creation if no room present for currently chosen school
Also open room creation if _starWithCreation is set which at this moment is only set when coming
from the computeroom module

Bug #43080: Switch to rooms module with _startWithCreation flag set
Only display noRoomsDialog if there is only one school for the user to choose from

--- a/ucs-school-umc-computerroom/umc/js/de.po
+++ b/ucs-school-umc-computerroom/umc/js/de.po
@@ -305,7 +305,8 @@ msgstr "Benutzerdefnierte Einstellungen für den Computerraum"
 #: umc/js/computerroom.js:1123
 msgid ""
 "Please contact your system administrator for the creation of computer rooms."
-msgstr "Please contact your system administrator for the creation of computer rooms."
+msgstr ""
+"Bitte kontaktieren Sie ihren Systemadministrator für das Anlegen von Computerräumen."
 
 #: umc/js/computerroom.js:903
 msgid "Please wait while all exam documents are being collected."
