Bug #43080: Add missing translation

--- a/ucs-school-umc-computerroom/umc/js/de.po
+++ b/ucs-school-umc-computerroom/umc/js/de.po
@@ -307,7 +307,7 @@ msgstr "Benutzerdefnierte Einstellungen für den Computerraum"
 msgid ""
 "Please contact your system administrator for the creation of computer rooms."
 msgstr ""
-"Please contact your system administrator for the creation of computer rooms."
+"Bitte kontaktieren Sie ihren Systemadministrator für das Anlegen von Computerräumen."
 
 #: umc/js/computerroom.js:903
 msgid "Please wait while all exam documents are being collected."
