--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-51) unstable; urgency=medium
+
+  * Bug #42416: factory test doesn't need special CsvReader anymore
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 30 May 2018 09:08:02 +0200
+
 ucs-test-ucsschool (5.0.2-50) unstable; urgency=low
 
   * Bug #42416: adapt tests to use the new special mapping value in the regular
