--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-90) unstable; urgency=medium
+
+  * Bug #47073: factory test doesn't need special CsvReader anymore
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 30 May 2018 09:09:45 +0200
+
 ucs-test-ucsschool (4.0.4-89) unstable; urgency=low
 
   * Bug #47073: adapt tests to use the new special mapping value in the
