--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (9.0.9-2) unstable; urgency=medium
+
+  * Bug #46872: Only show noRoomsDialog if user has only one school
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 30 May 2018 09:46:04 +0100
+
 ucs-school-umc-computerroom (9.0.9-1) unstable; urgency=medium
 
   * Bug #46872: Show dialog if no computer room is available
