Bug #47017: Integrate feedback

--- a/ucs-school-umc-lists/debian/changelog
+++ b/ucs-school-umc-lists/debian/changelog
@@ -1,5 +1,11 @@
+ucs-school-umc-lists (1.0.0-2) unstable; urgency=medium
+
+  * Bug #47017: Integrate feedback
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 30 May 2018 15:40:08 +0200
+
 ucs-school-umc-lists (1.0.0-1) unstable; urgency=medium
 
-  * Bug# 47017: Initial version
+  * Bug #47017: Initial version
 
  -- Jürn Brodersen <brodersen@univention.de>  Mon, 14 May 2018 15:15:33 +0200
