--- a/ucs-school-umc-lists/umc/js/de.po
+++ b/ucs-school-umc-lists/umc/js/de.po
@@ -18,6 +18,9 @@ msgstr "Klasse oder Arbeitsgruppe"
 msgid "School"
 msgstr "Schule"
 
+msgid "Export"
+msgstr "Export"
+
 msgid "Select a class or workgroup."
 msgstr "Auswahl einer Klasse oder Arbeitsgruppe."
 
@@ -29,3 +32,8 @@ msgstr "Liste der Gruppenmitglieder herunterladen"
 
 msgid "Please select a class or workgroup."
 msgstr "Bitte eine Klasse oder Arbeitsgruppe auswählen."
+
+msgid ""
+"This module lets you export class and workgroup lists. The lists are in the csv format. If you have problems opening the exported file, ensure the encoding is set to UTF-8 and the field seperator is set to \",\".<p><a target='_blank' href=modules/schoollists/lo_import_hl_en.png>Help for LibreOffice</a></p>"
+msgstr ""
+"Dieses Modul ermöglicht es Klassen- und Arbeitsgruppenlisten zu exportieren. Die Listen sind im csv Format. Die Datei ist UTF-8 kodiert und nutzt \",\" als Feldtrenner.<p><a target='_blank' href=modules/schoollists/lo_import_hl_de.png>Hilfe für LibreOffice</a></p>"
