--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-52) unstable; urgency=low
+
+  * Bug #47027: added 234_modify_user_data_in_pyhooks
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 31 May 2018 18:03:40 +0200
+
 ucs-test-ucsschool (5.0.2-51) unstable; urgency=medium
 
   * Bug #42416: factory test doesn't need special CsvReader anymore
