--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-10) unstable; urgency=low
+
+  * Bug #46970: add deepcopy operation support to ucsschool.lib.models objects
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Jun 2018 08:57:27 +0200
+
 ucs-school-lib (11.0.1-9) unstable; urgency=low
 
   * Bug #45379: remove (revert) all code from this bug (object type)
