--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-93) unstable; urgency=low
+
+  * Bug #46970: test if leading/trailing whitespace is removed
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Jun 2018 09:13:38 +0200
+
 ucs-test-ucsschool (4.0.4-92) unstable; urgency=low
 
   * Bug #47028: updated 234_modify_user_data_in_pyhooks
