--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-55) unstable; urgency=medium
+
+  * Bug #45749: add test for HTTP-API Python client
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Jun 2018 09:50:25 +0200
+
 ucs-test-ucsschool (5.0.2-54) unstable; urgency=low
 
   * Bug #46970: test if leading/trailing whitespace is removed
