--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,17 @@
+ucs-school-import (15.0.3-41) unstable; urgency=medium
+
+  * Bug #47118: increase startup verbosity
+  * Bug #47118: fix name clashes with reverse accessor (adapt to Django 1.10)
+  * Bug #47118: add DB migrations
+  * Bug #47118: workaround displayName not set when ou==displayName
+  * Bug #47118: fix typo, add more doc
+  * Bug #47118: HTTP-API documentation
+  * Bug #47118: wording less ambiguous
+  * Bug #47118: fix docstrings
+  * Bug #47118: copyright update
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Jun 2018 10:59:17 +0200
+
 ucs-school-import (15.0.3-40) unstable; urgency=low
 
   * Bug #46970: strip leading/trailing whitespace from CSV input
