--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.3-42) unstable; urgency=low
+
+  * Bug #46832: add Roles resource to HTTP-API, allowing to retrieve the
+    available roles of a user
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Jun 2018 11:18:29 +0200
+
 ucs-school-import (15.0.3-41) unstable; urgency=medium
 
   * Bug #47118: increase startup verbosity
