Bug #47017: User uppercase in csv header; Helptext modifications

--- a/ucs-school-umc-lists/debian/changelog
+++ b/ucs-school-umc-lists/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-lists (1.0.0-3) unstable; urgency=medium
+
+  * Bug #47017: User uppercase in csv header; Helptext modifications
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 04 Jun 2018 13:09:47 +0200
+
 ucs-school-umc-lists (1.0.0-2) unstable; urgency=medium
 
   * Bug #47017: Integrate feedback
