--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.2-2) unstable; urgency=low
+
+  * Bug #47134: gunicorn listens on port 9898 by default
+  * fix configuration file is never used
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Jun 2018 17:19:17 +0200
+
 ucs-school-import (16.0.2-1) unstable; urgency=medium
 
   * Bug #45749: add Roles resource to HTTP-API, allowing to retrieve the
