--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-45) unstable; urgency=low
+
+  * Bug #46831: make gunicorn log level configurable
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Jun 2018 17:53:43 +0200
+
 ucs-school-import (15.0.3-44) unstable; urgency=low
 
   * Bug #47134: fix gunicorn configuration file for 4.2
