Bug #46872: Backport from 4.3:
Bug #43080: Disable Select room button if no room is selected in list
Bug #43080: Fix wrong translation
Bug #43080: Fit wording to match existing terms

--- a/ucs-school-umc-computerroom/umc/js/de.po
+++ b/ucs-school-umc-computerroom/umc/js/de.po
@@ -268,7 +268,7 @@ msgstr "MAC-Adresse"
 
 #: umc/js/computerroom.js:1127
 msgid "Manage computer rooms"
-msgstr "Computerraum auswählen"
+msgstr "Computerräume verwalten"
 
 #: umc/js/computerroom.js:631
 msgid "Monitoring is activated"
