--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-4) unstable; urgency=low
+
+  * Bug #46830: add UCRV descriptions
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 06 Jun 2018 12:02:38 +0200
+
 ucs-school-import (16.0.2-3) unstable; urgency=low
 
   * Bug #46830: make gunicorn log level configurable
