--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-5) unstable; urgency=low
+
+  * Bug #47156: HTTP-API must always prepend school name to class names
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 07 Jun 2018 14:36:53 +0200
+
 ucs-school-import (16.0.2-4) unstable; urgency=low
 
   * Bug #46830: add UCRV descriptions
