Bug #47017: fix UMC module's subtitle

--- a/ucs-school-umc-lists/umc/de.po
+++ b/ucs-school-umc-lists/umc/de.po
@@ -16,4 +16,4 @@ msgid "Class Lists"
 msgstr "Klassenlisten"
 
 msgid "Generate lists for classes and workgroups"
-msgstr "Generieren von Listen für Klassen und Arbeitgruppen"
+msgstr "Generieren von Listen für Klassen und Arbeitsgruppen"
