--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-7) unstable; urgency=low
+
+  * Bug #47156: force use of HttpApiCsvReader
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Jun 2018 10:06:22 +0200
+
 ucs-school-import (16.0.2-6) unstable; urgency=low
 
   * #45020: enhance HTTP-API documentation
