--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (5.0.2-56) unstable; urgency=low
+
+  * Bug #47156: add HTTP-API test class
+  * Bug #47156: add check that school names in classes column are not used
+  * Bug #45749: also check schools
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Jun 2018 10:04:29 +0200
+
 ucs-test-ucsschool (5.0.2-55) unstable; urgency=medium
 
   * Bug #45749: add test for HTTP-API Python client
