--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.2-8) unstable; urgency=low
+
+  * Bug #47156: always use default and custom user_import_http-api.json
+  * check class of active CSV reader
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Jun 2018 12:57:08 +0200
+
 ucs-school-import (16.0.2-7) unstable; urgency=low
 
   * Bug #47156: force use of HttpApiCsvReader
