--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-49) unstable; urgency=low
+
+  * Bug #47157: force use of HttpApiCsvReader
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Jun 2018 14:12:24 +0200
+
 ucs-school-import (15.0.3-48) unstable; urgency=low
 
   * Bug #45020: enhance HTTP-API documentation
