--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (4.0.4-95) unstable; urgency=low
+
+  * Bug #47157: add HTTP-API test class
+  * Bug #47157: add check that school names in classes column are not used
+  * Bug #46832: also check schools
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Jun 2018 14:11:19 +0200
+
 ucs-test-ucsschool (4.0.4-94) unstable; urgency=low
 
   * Bug #46832: add test for HTTP-API Python client
