--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.2-9) unstable; urgency=low
+
+  * Bug #45749: add ou_post_create hook that creates the corresponding Django
+    School object
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Jun 2018 18:15:53 +0200
+
 ucs-school-import (16.0.2-8) unstable; urgency=low
 
   * Bug #47156: always use default and custom user_import_http-api.json
