--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-10) unstable; urgency=low
+
+  * Bug #45163: create custom django-admin commands
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 12 Jun 2018 11:17:11 +0200
+
 ucs-school-import (16.0.2-9) unstable; urgency=low
 
   * Bug #45749: add ou_post_create hook that creates the corresponding Django
