--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-57) unstable; urgency=medium
+
+  * Bug #40727: reuse umc connection to save memory
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 14 Jun 2018 15:01:42 +0200
+
 ucs-test-ucsschool (5.0.2-56) unstable; urgency=low
 
   * Bug #47156: add HTTP-API test class
