--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-59) unstable; urgency=medium
+
+  * Bug #35076: Remove print mode 'all' from test
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 14 Jun 2018 16:26:03 +0200
+
 ucs-test-ucsschool (5.0.2-58) unstable; urgency=medium
 
   * Bug #47017: add new module to test
