--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-64) unstable; urgency=medium
+
+  * Bug #42658: debug problems with 70_users_module
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 15 Jun 2018 14:15:04 +0200
+
 ucs-test-ucsschool (5.0.2-63) unstable; urgency=medium
 
   * Bug #42658: use master umc connection (10_assign_internet_rules_check)
