--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-11) unstable; urgency=low
+
+  * Bug #45447: remove + from SambaForceGroup option in shares
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Tue, 19 Jun 2018 08:50:12 +0200
+
 ucs-school-lib (11.0.1-10) unstable; urgency=low
 
   * Bug #46970: add deepcopy operation support to ucsschool.lib.models objects
